--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,8 @@ Resuable Code Section
 }
 
 .container {
-  max-width: 100rem;
+  max-width: 90%;
+  /* max-width: 140rem; */
   /* here max width was 140rem in thapa */
   margin: 0 auto;
 }
@@ -343,4 +344,79 @@ Resuable Code Section
   border-bottom-color: var(--helper);
   top: -1.6rem;
 
+}
+
+/* =============================
+portfolio Code Section 
+======================================= */
+
+.section-portfolio {
+  background: var(--bg);
+  transition: all 0.75 linear;
+}
+
+.section-portfolio p{
+  max-width: 60rem;
+}
+
+.p-btns {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 3.2rem;
+  margin-top: 6.4rem;
+}
+
+.portfolio-images{
+  gap: 3.2rem;
+  margin-top: 6.4rem;
+}
+
+.portfolio-images img{
+  width: 100%;
+  border-radius: 7px;
+  position: relative;
+  overflow: hidden;
+}
+
+.img-overlay{
+  position: relative;
+  overflow: hidden;
+}
+
+.img-overlay .overlay{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: var(--gradientSupport);
+  opacity: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transform: translateY(100%);
+  transition: all 0.3s linear;
+  border-radius: 7px;
+}
+
+.img-overlay:hover > .overlay{
+  transform: translateY(0);
+  opacity: 0.8;
+  cursor: pointer;
+
+}
+
+.img-overlay .common-heading{
+  margin: 0;
+  color: var(--white);
+  text-decoration: none;
+}
+
+.p-btn:hover{
+  transform: translateY(-1rem);
+}
+
+.p-btn-active{
+  transform: translateY(-1rem);
 }
