--- a/css/style.css
+++ b/css/style.css
@@ -549,7 +549,6 @@ our swiper Section Start
   height: 100%;
   margin-top: 9rem;
 }
-
 .swiper-slide {
   text-align: center;
   font-size: 18px;
@@ -626,4 +625,47 @@ our swiper Section Start
   height: 10rem;
   border-radius: 50%;
   border: .5rem solid var(--helper-tint);
+}
+
+/* ===========================================
+Freelancing Section Start
+======================================= */
+
+.section-freelancing{
+  background-image: url(../images/folio/3.jpg);
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-attachment: fixed;
+  position: relative;
+  transition: all 0.7s linear;
+  text-align: center;
+}
+
+.section-freelancing .overlay{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--helper);
+  background-color: var(--overlay);
+  opacity: 0.7;
+
+}
+
+.section-freelancing .container{
+  position: relative;
+}
+
+.section-freelancing h2{
+  font-size: 5.4rem;
+}
+
+.section-freelancing span{
+  color: #a0f669;
+}
+
+.section-freelancing h2, .section-freelancing p{
+  color: var(--white);
+  margin-bottom: 1.8rem;
 }
