scroll to top,hire me btn js code,client number section js done

--- a/css/style.css
+++ b/css/style.css
@@ -776,3 +776,44 @@ footer a:hover,
 footer a:active {
   color: var(--white);
 }
+
+/* ===========================================
+Scroll Section Start
+======================================= */
+
+.scrollTop-style {
+  position: fixed;
+  right: 2%;
+  bottom: 5%;
+  z-index: 1;
+}
+
+.scroll-top {
+  width: 4rem;
+  height: 4rem;
+  background: var(--helper);
+  display: inline-block;
+  padding: 1.4rem 1.8rem;
+  position: relative;
+  color: var(--white);
+  animation: water-wave 3s linear infinite;
+  cursor: pointer;
+}
+
+/* ===========================================
+/* media queries  
+======================================= */
+/* px  */
+/* rem  */
+/* em  */
+/* 1500px */
+@media (max-width: 95em) {
+  .container {
+    max-width: 130rem;
+    padding: 0 3.2rem;
+  }
+
+  .navbar-lists {
+    gap: 3.4rem;
+  }
+}
