--- a/css/style.css
+++ b/css/style.css
@@ -103,8 +103,36 @@
     color: var(--helper);
 }
 
-  /* =============================
-Resuable Code Section 
+.mobile-navbar-btn {
+  display: none;
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+}
+
+.mobile-nav-icon[name="close-outline"] {
+  display: none;
+}
+
+/* sticky navbar  */
+.sticky .header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 9999;
+  background-color: rgba(255, 255, 255, 1);
+  padding-top: 0;
+  padding-bottom: 0;
+  box-shadow: var(--shadow);
+}
+
+.sticky .section-hero {
+  margin-top: 10rem;
+}
+
+/* =============================
+Reuseable Code Section 
 ======================================= */
 
 .section {
@@ -803,11 +831,7 @@ Scroll Section Start
 /* ===========================================
 /* media queries  
 ======================================= */
-/* px  */
-/* rem  */
-/* em  */
-/* 1500px */
-@media (max-width: 95em) {
+/* @media (max-width: 95em) {
   .container {
     max-width: 130rem;
     padding: 0 3.2rem;
@@ -816,4 +840,76 @@ Scroll Section Start
   .navbar-lists {
     gap: 3.4rem;
   }
+} */
+
+@media (max-width: 980px) {
+  .header {
+   position: relative;
+  }
+
+  .mobile-navbar-btn {
+    display: block;
+    z-index: 9999;
+    border: 3px solid var(--black);
+    color: #212529;
+  }
+
+  .mobile-nav-icon{
+    width: 5rem;
+    height: 5rem;
+    color: var(--black);
+  }
+  .header .logo{
+    width: 40%;
+  }
+
+  .navbar{
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: var(--gradient);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+
+    transform: translateX(100%);
+    transition: all 0.5s linear;
+
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+  }
+
+  .navbar-lists{
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .navbar .navbar-lists .navbar-link:link,
+  .navbar .navbar-lists .navbar-link:visited{
+    color: #212529;
+    font-size: 3.2rem;
+  }
+
+  .active .navbar{
+    transform: translateX(0%);
+    /* transition: all 0.5 linear; */
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+  }
+
+  .active .mobile-navbar-btn .mobile-nav-icon[name="menu-outline"]{
+    display: none;
+  }
+
+  .active .mobile-navbar-btn .mobile-nav-icon[name="close-outline"]{
+    display: block;
+  }
+
 }
+
+
