--- a/css/style.css
+++ b/css/style.css
@@ -8,86 +8,89 @@
 }
 
 :root {
-    --heading: rgb(0 10 45);
-    --para: #777;
-    --para-tint: #e4e4e4;
-    --white: #fff;
-    --black: #212529;
-    --helper: #8490ff;
-    --overlay: #3e64ff;
-    --helper-tint: #f3f4ff;
-    --bg: rgb(249 249 255);
-    --icons-bg: rgba(144, 172, 209, 0.2);
-    --gradient: linear-gradient(0deg, rgb(132 144 255) 0%, rgb(98 189 252) 100%);
-    --gradientSupport: -webkit-linear-gradient(
-      0deg,
+  --heading: rgb(0 10 45);
+  --para: #777;
+  --para-tint: #e4e4e4;
+  --white: #fff;
+  --black: #212529;
+  --helper: #8490ff;
+  --overlay: #3e64ff;
+  --helper-tint: #f3f4ff;
+  --bg: rgb(249 249 255);
+  --icons-bg: rgba(144, 172, 209, 0.2);
+  --gradient: linear-gradient(0deg, rgb(132 144 255) 0%, rgb(98 189 252) 100%);
+  --gradientSupport: -webkit-linear-gradient(0deg,
       rgb(132 144 255) 0%,
-      rgb(98 189 252) 100%
-    );
-    --shadow: 0px 0px 20px 0px rgb(132 144 255 / 20%);
-    --shadowSupport: 0px 20px 20px 0px rgb(132 144 255 / 30%);
-  }
-  
-  html {
-    font-size: 62.5%;
-    /* scroll-behavior: smooth; */
-    /* 1rem = 10px */
-  }
-  
-  h1,
-  h2,
-  h3,
-  h4 {
-    font-family: "Poppins", sans-serif;
-  }
-  
-  h1 {
-    color: var(--heading);
-    font-size: 6rem;
-    font-weight: 600;
-  }
-  
-  h3 {
-    font-size: 1.8rem;
-    font-weight: 400;
-  }
-  
-  p {
-    color: var(--para);
-    line-height: 1.6;
-    font-size: 1.7rem;
-  }
-  
-  a {
-    text-decoration: none;
-  }
-  
-  li {
-    list-style: none;
-  }
-
-  /* header section start here */
-
-.header{
-    padding: 0 4.8rem;
-    height: 10rem;
-    background-color: var(--bg);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+      rgb(98 189 252) 100%);
+  --shadow: 0px 0px 20px 0px rgb(132 144 255 / 20%);
+  --shadowSupport: 0px 20px 20px 0px rgb(132 144 255 / 30%);
 }
 
-  .header .logo {
-      height: 4rem;
+html {
+  font-size: 62.5%;
+  /* scroll-behavior: smooth; */
+  /* 1rem = 10px */
+  overflow-x: hidden;
+}
 
-  }
+body {
+  overflow-x: hidden;
+}
 
-  .navbar-lists{
-    display: flex;
-    gap: 4.8rem;
-  }
+h1,
+h2,
+h3,
+h4 {
+  font-family: "Poppins", sans-serif;
+}
 
-  .navbar-link:link,
+h1 {
+  color: var(--heading);
+  font-size: 6rem;
+  font-weight: 600;
+}
+
+h3 {
+  font-size: 1.8rem;
+  font-weight: 400;
+}
+
+p {
+  color: var(--para);
+  line-height: 1.6;
+  font-size: 1.7rem;
+}
+
+a {
+  text-decoration: none;
+}
+
+li {
+  list-style: none;
+}
+
+/* header section start here */
+
+.header {
+  padding: 0 4.8rem;
+  height: 10rem;
+  background-color: var(--bg);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header .logo {
+  height: 4rem;
+
+}
+
+.navbar-lists {
+  display: flex;
+  gap: 4.8rem;
+}
+
+.navbar-link:link,
 .navbar-link:visited {
   display: inline-block;
   text-decoration: none;
@@ -96,11 +99,11 @@
   text-transform: uppercase;
   color: var(--black);
   transition: color 0.3s linear;
-} 
+}
 
 .navbar-link:hover,
-.navbar-link:active{
-    color: var(--helper);
+.navbar-link:active {
+  color: var(--helper);
 }
 
 .mobile-navbar-btn {
@@ -267,30 +270,30 @@ Reuseable Code Section
 
 /* Bio section start  */
 
-.bio-image{
+.bio-image {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.bio-image img{
+.bio-image img {
   width: 80%;
   box-shadow: -2rem -2rem 0 0 var(--helper);
   display: inline-block;
 }
 
-.bio-data-stats{
+.bio-data-stats {
   display: flex;
   padding: 6.4rem 0;
   flex-direction: column;
   gap: 3rem;
 }
 
-.bio-stats h3{
+.bio-stats h3 {
   margin-bottom: 1rem;
 }
 
-.bio-progress-bar{
+.bio-progress-bar {
   width: 90%;
   height: 0.8rem;
   background-color: var(--para-tint);
@@ -299,7 +302,7 @@ Reuseable Code Section
   position: relative;
 }
 
-.bio-progress-bar::before{
+.bio-progress-bar::before {
   content: "";
   position: absolute;
   top: 0;
@@ -310,23 +313,23 @@ Reuseable Code Section
   border-radius: 10rem;
 }
 
-.bio-progress-2::before{
+.bio-progress-2::before {
   width: 99%;
 }
 
-.bio-progress-3::before{
+.bio-progress-3::before {
   width: 90%;
 }
 
-.bio-progress-4::before{
+.bio-progress-4::before {
   width: 85%;
 }
 
-.bio-progress-5::before{
+.bio-progress-5::before {
   width: 70%;
 }
 
-.bio-progress-bar span{
+.bio-progress-bar span {
   position: absolute;
   top: 1.8rem;
   width: 4rem;
@@ -340,23 +343,23 @@ Reuseable Code Section
   outline: 0;
 }
 
-.bio-progress-bar span{
+.bio-progress-bar span {
   left: 76%;
 }
 
-.bio-progress-2 span{
+.bio-progress-2 span {
   left: 95%;
 }
 
-.bio-progress-3 span{
+.bio-progress-3 span {
   left: 86%;
 }
 
-.bio-progress-4 span{
+.bio-progress-4 span {
   left: 81%;
 }
 
-.bio-progress-5 span{
+.bio-progress-5 span {
   left: 66%;
 }
 
@@ -383,7 +386,7 @@ portfolio Code Section
   transition: all 0.75 linear;
 }
 
-.section-portfolio p{
+.section-portfolio p {
   max-width: 60rem;
 }
 
@@ -395,24 +398,24 @@ portfolio Code Section
   margin-top: 6.4rem;
 }
 
-.portfolio-images{
+.portfolio-images {
   gap: 3.2rem;
   margin-top: 6.4rem;
 }
 
-.portfolio-images img{
+.portfolio-images img {
   width: 100%;
   border-radius: 7px;
   position: relative;
   overflow: hidden;
 }
 
-.img-overlay{
+.img-overlay {
   position: relative;
   overflow: hidden;
 }
 
-.img-overlay .overlay{
+.img-overlay .overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -428,14 +431,14 @@ portfolio Code Section
   border-radius: 7px;
 }
 
-.img-overlay:hover > .overlay{
+.img-overlay:hover>.overlay {
   transform: translateY(0);
   opacity: 0.8;
   cursor: pointer;
 
 }
 
-.img-overlay .common-heading{
+.img-overlay .common-heading {
   margin: 0;
   color: var(--white);
   text-decoration: none;
@@ -445,7 +448,7 @@ portfolio Code Section
   transform: translateY(-1rem);
 } */
 
-.p-btn-active{
+.p-btn-active {
   transform: translateY(-1rem);
 }
 
@@ -553,9 +556,11 @@ our services Section Start
   0% {
     border-radius: 56% 44% 70% 30% / 30% 54% 46% 70%;
   }
+
   50% {
     border-radius: 3% 97% 15% 85% / 72% 0% 100% 28%;
   }
+
   100% {
     border-radius: 56% 44% 70% 30% / 30% 54% 46% 70%;
   }
@@ -577,6 +582,7 @@ our swiper Section Start
   height: 100%;
   margin-top: 9rem;
 }
+
 .swiper-slide {
   text-align: center;
   font-size: 18px;
@@ -607,7 +613,7 @@ our swiper Section Start
   position: relative;
 }
 
-.swiper-client-msg::before{
+.swiper-client-msg::before {
   content: "";
   position: absolute;
   bottom: -10rem;
@@ -618,7 +624,7 @@ our swiper Section Start
   border-top-color: var(--helper-tint);
 }
 
-.swiper-client-msg p::before{
+.swiper-client-msg p::before {
   content: "\f10d";
   position: absolute;
   top: 0;
@@ -629,7 +635,7 @@ our swiper Section Start
   color: #ced3ff;
 }
 
-.swiper-client-msg p::after{
+.swiper-client-msg p::after {
   content: "\f10e";
   position: absolute;
   bottom: 0;
@@ -641,14 +647,14 @@ our swiper Section Start
 }
 
 
-.swiper-client-data{
+.swiper-client-data {
   align-items: center;
   margin-top: 3.2rem;
   gap: 3.2rem;
 
 }
 
-.swiper-slide img{
+.swiper-slide img {
   max-width: 10rem;
   height: 10rem;
   border-radius: 50%;
@@ -659,7 +665,7 @@ our swiper Section Start
 Freelancing Section Start
 ======================================= */
 
-.section-freelancing{
+.section-freelancing {
   background-image: url(../images/folio/3.jpg);
   background-repeat: no-repeat;
   background-size: 100%;
@@ -669,7 +675,7 @@ Freelancing Section Start
   text-align: center;
 }
 
-.section-freelancing .overlay{
+.section-freelancing .overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -681,19 +687,20 @@ Freelancing Section Start
 
 }
 
-.section-freelancing .container{
+.section-freelancing .container {
   position: relative;
 }
 
-.section-freelancing h2{
+.section-freelancing h2 {
   font-size: 5.4rem;
 }
 
-.section-freelancing span{
+.section-freelancing span {
   color: #a0f669;
 }
 
-.section-freelancing h2, .section-freelancing p{
+.section-freelancing h2,
+.section-freelancing p {
   color: var(--white);
   margin-bottom: 1.8rem;
 }
@@ -702,24 +709,25 @@ Freelancing Section Start
 Contact Section Start
 ======================================= */
 
-.section-contact-main{
+.section-contact-main {
   max-width: 70rem;
   margin: 0 auto;
   margin-top: 9rem;
   transition: all 0.3s linear;
 }
 
-.section-contact-main .grid{
+.section-contact-main .grid {
   gap: 3.2rem;
 }
 
-.section-contact-main form{
+.section-contact-main form {
   display: flex;
   flex-direction: column;
   gap: 3.2rem;
 }
 
-.section-contact-main input, .section-contact-main textarea{
+.section-contact-main input,
+.section-contact-main textarea {
   padding: 1.5rem 2rem;
   border: 0.1rem solid #c9c9c9;
   border-radius: 5px;
@@ -728,30 +736,32 @@ Contact Section Start
   width: 100%;
 }
 
-.section-contact-main input[type="submit"]{
+.section-contact-main input[type="submit"] {
   max-width: 100%;
   border: none;
 }
 
-  /* =============================
+/* =============================
 Footer Section 
 ======================================= */
 
-.section-footer{
+.section-footer {
   background-color: var(--heading);
   transition: all 0.7s linear;
 }
 
-.section-footer h3{
+.section-footer h3 {
   color: var(--white);
   margin-bottom: 4rem;
 }
 
-.f-about{
+.f-about {
   color: #adadad;
 }
 
-.f-links ul, .f-services ul, .f-address address{
+.f-links ul,
+.f-services ul,
+.f-address address {
   display: flex;
   flex-direction: column;
   gap: 1.8rem;
@@ -759,28 +769,34 @@ Footer Section
 
 }
 
-.f-links li, .f-links a, .f-services li, .f-services a{
+.f-links li,
+.f-links a,
+.f-services li,
+.f-services a {
   font-size: 1.8rem;
   color: #adadad;
   text-transform: capitalize;
 }
 
-.f-links span, .f-services span, .f-address span{
+.f-links span,
+.f-services span,
+.f-address span {
   margin-right: 1rem;
 }
 
-.f-address p, .f-address p a{
+.f-address p,
+.f-address p a {
   font-style: normal;
   color: #adadad;
 }
 
-.f-social-icons{
+.f-social-icons {
   margin: 5rem 0;
   text-align: center;
   color: #adadad;
 }
 
-.f-social-icons .icons{
+.f-social-icons .icons {
   width: 4rem;
   height: 4rem;
   background-color: var(--icons-bg);
@@ -791,12 +807,12 @@ Footer Section
   animation: water-wave 3s linear infinite;
 }
 
-.f-credits p{
+.f-credits p {
   text-align: center;
   color: #adadad;
 }
 
-.credit{
+.credit {
   color: navajowhite;
 }
 
@@ -842,9 +858,43 @@ Scroll Section Start
   }
 } */
 
+@media (max-width: 95em) {
+  .container {
+    max-width: 130rem;
+    padding: 0 3.2rem;
+  }
+
+  .navbar-lists {
+    gap: 3.4rem;
+  }
+
+}
+
+/* for 1200px */
+@media (max-width: 75em) {
+  html {
+    font-size: 56.25%;
+  }
+
+  .container {
+    max-width: 110rem;
+  }
+
+  .grid {
+    gap: 4.8rem;
+  }
+
+}
+
+/* for 980px */
 @media (max-width: 980px) {
+  
+  html{
+    font-size: 50%;
+  }
+
   .header {
-   position: relative;
+    position: relative;
   }
 
   .mobile-navbar-btn {
@@ -854,16 +904,17 @@ Scroll Section Start
     color: #212529;
   }
 
-  .mobile-nav-icon{
+  .mobile-nav-icon {
     width: 5rem;
     height: 5rem;
     color: var(--black);
   }
-  .header .logo{
+
+  .header .logo {
     width: 40%;
   }
 
-  .navbar{
+  .navbar {
     width: 100%;
     height: 100vh;
     position: absolute;
@@ -883,18 +934,18 @@ Scroll Section Start
     pointer-events: none;
   }
 
-  .navbar-lists{
+  .navbar-lists {
     flex-direction: column;
     align-items: center;
   }
 
   .navbar .navbar-lists .navbar-link:link,
-  .navbar .navbar-lists .navbar-link:visited{
+  .navbar .navbar-lists .navbar-link:visited {
     color: #212529;
     font-size: 3.2rem;
   }
 
-  .active .navbar{
+  .active .navbar {
     transform: translateX(0%);
     /* transition: all 0.5 linear; */
     opacity: 1;
@@ -902,14 +953,31 @@ Scroll Section Start
     pointer-events: auto;
   }
 
-  .active .mobile-navbar-btn .mobile-nav-icon[name="menu-outline"]{
+  .active .mobile-navbar-btn .mobile-nav-icon[name="menu-outline"] {
     display: none;
   }
 
-  .active .mobile-navbar-btn .mobile-nav-icon[name="close-outline"]{
+  .active .mobile-navbar-btn .mobile-nav-icon[name="close-outline"] {
     display: block;
   }
 
+  /* hero-section */
+
+  .section-hero h1{
+    line-height: 1.05;
+  }
+/* services section */
+
+.section-services .grid{
+  gap: 6rem;
 }
 
+.section-services .grid-three-column{
+  grid-template-columns: repeat(2, 1fr);
+}
 
+.section-footer .grid-four-column{
+  grid-template-columns: 1fr 1fr;
+}
+
+}
